--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,21 @@
 plugins {
     id 'com.android.application'
+
+    ////////// 1. simple jacoco plugin //////////
+    id 'jacoco'
+
+    ////////// 2. move sonarqube plugin into app/build.gradle //////////
+    id 'org.sonarqube' version '3.3'
+
 }
 
 android {
-    namespace 'com.example.myapplication'
-    compileSdk 33
+    compileSdk 32
 
     defaultConfig {
         applicationId "com.example.myapplication"
-        minSdk 24
-        targetSdk 33
+        minSdk 30
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -26,14 +32,57 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    ////////// 4. add testOptions //////////
+    testOptions {
+        unitTests.all {
+            useJUnitPlatform()
+            finalizedBy jacocoTestReport
+        }
+    }
+}
+
+////////// 3. add jacocoTestReport task like so //////////
+task jacocoTestReport(type: JacocoReport, dependsOn: 'testDebugUnitTest') {
+
+    reports {
+        xml.enabled true
+
+        //////////  5. xml.destination must be same as sonaqube property  //////////
+        xml.destination file("${project.projectDir}/build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml")
+    }
+
+    def fileFilter = ['**/R.class', '**/R$*.class', '**/BuildConfig.*', '**/Manifest*.*', '**/*Test*.*', 'android/**/*.*']
+    def debugTree = fileTree(dir: "${buildDir}/intermediates/javac/debug", excludes: fileFilter)
+    def mainSrc = "${project.projectDir}/src/main/java"
+
+    sourceDirectories.from = files([mainSrc])
+    classDirectories.from = files([debugTree])
+    executionData.from = files("${buildDir}/jacoco/testDebugUnitTest.exec")
+}
+
+////////// 2. move also sonarqube properties //////////
+sonarqube {
+    properties {
+        property "sonar.projectKey", "SE2-sample-tut-project_demo-repo"
+        property "sonar.organization", "se2-sample-tut-project"
+        property "sonar.host.url", "https://sonarcloud.io"
+        property "sonar.java.coveragePlugin", "jacoco"
+
+        ////////// 5. property same as xml.destination of jacocoTestReport //////////
+        property "sonar.coverage.jacoco.xmlReportPaths", "${project.projectDir}/build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml"
+    }
 }
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
