--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ plugins {
 
 android {
     compileSdk 32
-
+    namespace 'com.example.myapplication'
     defaultConfig {
         applicationId "com.example.myapplication"
         minSdk 30
